--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
     <title>Ahmad El-Fakharany</title>
-    <link rel="icon" type="image/x-icon" href="/images/avatar.jpg"> <!-- Update this with your own favicon -->
+    <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
     
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
     <meta name="description" content="Hey, I'm Ahmad El-Fakharany. Connect with me through one of these links.">
@@ -49,7 +49,7 @@
 
               Be sure to replace the src with your own image path and update the alt text
             -->
-            <img class="avatar avatar--rounded" src="images/avatar.jpg" alt="My avatar">
+            <img class="avatar avatar--rounded" src="images/avatar.png" alt="My avatar">
 
             <!-- Replace with your name or brand -->
             <h1 tabindex="0">
