--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/brands.css">
 
+    <!-- Custom Styles -->
+    <style>
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+    </style>
+
   </head>
 
 <body>
