--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <!-- Replace with your name or brand -->
             <h1 tabindex="0">
-              <div>Ahmad El-Fakharany</div>
+              <div>Ahmad<br>El-Fakharany</div>
             </h1>
 
             <!-- Add a short description about yourself or your brand -->
