--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </h1>
 
             <!-- Add a short description about yourself or your brand -->
-            <p tabindex="0">Let's get in touch :D</p>
+            <p tabindex="0">👨‍💻 CS Student at UMich Ann Arbor<br>📍 Detroit, MI<br>💬 Let's get in touch :D</p>
 
             <!-- All your buttons go here -->
             <div class="button-stack" role="navigation">
