--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
             <div class="button-stack" role="navigation">
               
               <!-- Generic Website -->
-              <a class="button button-default" href="https://ahmade.me" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-website.svg" alt="Website Icon">Check out my website</a>
+              <a class="button button-default" href="https://ahmade.me" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-website.svg" alt="Website Icon">Website</a>
+
+              <!--Resume-->
+              <a class="button button-default" href="https://go.jooba.com/8ei0cMV" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/read-cv.svg" alt="Resume Icon">Resume</a>
               
               <!-- GitHub -->
               <a class="button button-github" href="https://github.com/aelfakharany/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
