--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <a class="button button-default" href="https://ahmade.me" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-website.svg" alt="Website Icon">Website</a>
 
               <!--Resume-->
-              <a class="button button-default" href="https://go.jooba.com/8ei0cMV" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/read-cv.svg" alt="Resume Icon">Resume</a>
+              <a class="button button-default" href="https://go.elpha.ai/8ei0cMV" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/read-cv.svg" alt="Resume Icon">Resume</a>
               
               <!-- GitHub -->
               <a class="button button-github" href="https://github.com/aelfakharany/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
