--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </h1>
 
             <!-- Add a short description about yourself or your brand -->
-            <p tabindex="0">I like learning and building things, especially with code.<br>Let's get in touch!</p>
+            <p tabindex="0">I like learning and building things, especially with code. Let's get in touch!</p>
 
             <!-- All your buttons go here -->
             <div class="button-stack" role="navigation">
